# va-modeling

./: .gitmodules  README.md
src/cpp/: CMakeLists.txt
src/cpp/DecimationBenchmark/: CMakeLists.txt  main.cpp
src/cpp/Defs/: 1N4148_IVTable.hpp  1N4148_IVTableData.inl  TS808Components.hpp
src/cpp/DiodeClipper_NewMethod/: CMakeLists.txt  main.cpp
src/cpp/DiodeClipper_RK4/: CMakeLists.txt  main.cpp
src/cpp/LogisticGrowth/: CMakeLists.txt  main.cpp
src/cpp/NodeY/: CMakeLists.txt  main.cpp
src/cpp/NumMethods/: Decimation.hpp  FiniteDifferenceMethod.hpp  NewMethod.hpp  NewMethod_ODE_Descriptor.hpp  RungeKutta4.hpp  RungeKutta4_ODE_Descriptor.hpp  Stencil.hpp
src/cpp/SparseIVTable/: CMakeLists.txt  main.cpp
src/cpp/TS808VST/: 1N4148_AntiPar_IVTable_SparsePoint5.inl  1N4148_IVTable.hpp  Decimation.hpp  FIR.hpp  IIR.hpp  TS808Components.hpp  Tone_IIR_Table.hpp  cids.h  controller.cpp  controller.h  entry.cpp  pids.h  processor.cpp  processor.h  version.h
src/cpp/TheoryVerifier/: CMakeLists.txt  main.cpp
src/cpp/Utils/: AudioFilePrompt.hpp  CarryoverBuffer.hpp  CircleBuffer.hpp  Prompt.hpp  Stopwatch.hpp  Utility.hpp
src/cpp/WavDifferentiator/: CMakeLists.txt  main.cpp
src/python/: tone_circuit_iir_table_optimization.py  tone_circuit_response.py  wav_1536_to_192.py
